--- a/src/app/components/general/footer/footer.component.html
+++ b/src/app/components/general/footer/footer.component.html
@@ -13,7 +13,7 @@
             </li>
         </ul>
         <div class="footer-right-bar d-none d-md-block">
-            <a (click)='analyticsService.sendAnalyticEvent("click_send_mail", "footer", "email")' href="mailto:andresjosehr@gmail.com" target='_blank'>andresjosehr@gmail.com </a>
+            <a (click)='analyticsService.sendAnalyticEvent("click_send_mail", "footer", "email")' href="mailto:andresjosehr@gmail.com" target='_blank'>andresjosehr&#64;gmail.com </a>
         </div>
     </div>
 
