--- a/src/app/components/home/banner/banner.component.html
+++ b/src/app/components/home/banner/banner.component.html
@@ -8,7 +8,7 @@
                 </div>
                 <div class='banner-title'>
                     <h2>José Hernández.</h2>
-                    <h3>Frontend Developer</h3>
+                    <h3>Software Developer</h3>
                 </div>
                 <div class='banner-description'>
                     <p [innerHTML]='"Banner.Description" | translate' class="mt-4"></p>
