--- a/src/app/components/home/contact/contact.component.html
+++ b/src/app/components/home/contact/contact.component.html
@@ -21,7 +21,7 @@
               'email'
             )
           "
-          href="mailto:andresjosehr@gmail.com"
+          href="mailto:marcel@marcelluna.com"
           target="_blank"
           class="main-btn"
           data-aos="fade-up"
