--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,9 +1,9 @@
 <main>
     <app-banner></app-banner>
     <app-about></app-about>
-    <app-jobs></app-jobs>
-    <app-proyects></app-proyects>
-    <app-more-proyects></app-more-proyects>
+    <app-education></app-education>
+    <app-experience></app-experience>
+    <app-proficiency></app-proficiency>
     <app-contact></app-contact>
 </main>
 
