--- a/src/app/components/home/about/about.component.html
+++ b/src/app/components/home/about/about.component.html
@@ -3,13 +3,15 @@
         <div class="section-box">
             <div class="about-title" data-aos="fade-up">
                 <h3 class="section-title">
-                    <span class='n-section-title'>01.</span> {{"AboutMe.Title" | translate}}
+                    <span class='n-section-title'>01.</span> {{ 'about-me.title' | translate}}
                 </h3>
             </div>
             <div class="row">
                 <div class="col-12 col-md-6 mb-4 mb-md-0">
                     <div class="about-description">
-                        <p *ngFor='let text of "AboutMe.Paragraphs" | translate' [innerHTML]="text" data-aos="fade-up" data-aos-duration="1000"></p>
+                      @for (description of descriptions; track description.id) {
+                        <p [innerHTML]="description.description | translate" data-aos="fade-up" data-aos-duration="1000"></p>
+                      }
                     </div>
                 </div>
                 <div class="col-12 col-md-6 mt-4 mt-md-0 text-center" data-aos="fade-up" data-aos-duration="1000">
