--- a/src/app/components/home/contact/contact.component.html
+++ b/src/app/components/home/contact/contact.component.html
@@ -3,31 +3,20 @@
     <div class="section-box">
       <div class="mb-4" data-aos="fade-up" data-aos-duration="1000">
         <h3 class="contact-pre-title big-subtitle">
-          05. {{ "Contact.Pretitle" | translate }}
+          05. {{ 'contact.pre-title' | translate }}
         </h3>
         <h4 class="e-font contact-title big-title">
-          {{ "Contact.Title" | translate }}
+          {{ 'contact.title' | translate }}
         </h4>
       </div>
       <p data-aos="fade-up" data-aos-duration="1000">
-        {{ "Contact.Content" | translate }}
+        {{ 'contact.content' | translate }}
       </p>
       <div class="mt-5">
         <a
-          (click)="
-            analyticsService.sendAnalyticEvent(
-              'click_send_mail',
-              'contact',
-              'email'
-            )
-          "
-          href="mailto:marcel@marcelluna.com"
-          target="_blank"
-          class="main-btn"
-          data-aos="fade-up"
-          data-aos-duration="1000"
-        >
-          {{ "Contact.Btn" | translate }}
+          (click)=" analyticsService.sendAnalyticEvent( 'click_send_mail', 'contact', 'email')"
+          href="mailto:marcel@marcelluna.com" target="_blank" class="main-btn" data-aos="fade-up" data-aos-duration="1000">
+          {{ 'contact.btn' | translate }}
         </a>
       </div>
     </div>
