Improving labels and using data.service.ts for experience, education and proficiency

--- a/src/app/components/home/education/education.component.html
+++ b/src/app/components/home/education/education.component.html
@@ -15,12 +15,12 @@
                                     <div class="col-6 p-0">
                                         <img src='assets/icons/diploma.svg' width="40" class="filter-green">
                                     </div>
-                                    <h5 class="other-proyect-title mt-4">{{ education.title }}</h5>
+                                    <h5 class="other-proyect-title mt-4">{{ education.title | translate }}</h5>
                                     <p class="other-proyect-description">
-                                        {{ education.description}}
+                                        {{ education.description | translate}}
                                     </p>
                                     <p class="other-proyect-description">
-                                        {{ education.date}}
+                                        {{ education.date | translate}}
                                     </p>
                                 </div>
                             </div>
