--- a/src/app/components/home/proficiency/proficiency.component.html
+++ b/src/app/components/home/proficiency/proficiency.component.html
@@ -12,34 +12,34 @@
               <div class="col" data-aos="fade-up" data-aos-duration="1000">
                   <h5 class="other-proyect-title mt-4">{{ 'label.proficiency.programming' | translate}}</h5>
                   <ul class="skills-list" data-aos="fade-up">
-                      <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">Java </span></li>
-                      <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">C# </span></li>
-                      <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">Spring </span></li>
-                      <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">HTML </span></li>
-                      <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">Angular </span></li>
-                      <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">Ionic </span></li>
-                      <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">CSS & SCSS</span></li>
-                      <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">TypeScript </span></li>
+                      <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">{{ 'label.proficiency.java' | translate }}</span></li>
+                      <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">{{ 'label.proficiency.cSharp' | translate }}</span></li>
+                      <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">{{ 'label.proficiency.spring' | translate }}</span></li>
+                      <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">{{ 'label.proficiency.html' | translate }}</span></li>
+                      <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">{{ 'label.proficiency.angular' | translate }}</span></li>
+                      <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">{{ 'label.proficiency.ionic' | translate }}</span></li>
+                      <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">{{ 'label.proficiency.css' | translate }}</span></li>
+                      <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">{{ 'label.proficiency.typeScript' | translate }}</span></li>
                   </ul>
               </div>
               <div class="col" data-aos="fade-up" data-aos-duration="1000">
                 <h5 class="other-proyect-title mt-4">{{ 'label.proficiency.databases' | translate}}</h5>
                 <ul class="skills-list" data-aos="fade-up">
-                  <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">Oracle </span></li>
-                  <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">MySQL </span></li>
-                  <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">PostgreSQL </span></li>
-                  <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">MariaDB </span></li>
-                  <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">MongoDB </span></li>
-                  <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">Redis </span></li>
-                  <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">Others SQL and NoSQL </span></li>
+                  <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">{{ 'label.proficiency.oracle' | translate }}</span></li>
+                  <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">{{ 'label.proficiency.mysql' | translate }}</span></li>
+                  <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">{{ 'label.proficiency.postgres' | translate }}</span></li>
+                  <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">{{ 'label.proficiency.maria-db' | translate }}</span></li>
+                  <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">{{ 'label.proficiency.mongo-db' | translate }}</span></li>
+                  <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">{{ 'label.proficiency.redis' | translate }}</span></li>
+                  <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">{{ 'label.proficiency.other-sql' | translate }}</span></li>
                 </ul>
               </div>
               <div class="col" data-aos="fade-up" data-aos-duration="1000">
                 <h5 class="other-proyect-title mt-4">{{ 'label.proficiency.os' | translate}}</h5>
                 <ul class="skills-list" data-aos="fade-up">
-                  <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">Windows </span></li>
-                  <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">Linux </span></li>
-                  <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">MacOS </span></li>
+                  <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">{{ 'label.proficiency.windows' | translate }}</span></li>
+                  <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">{{ 'label.proficiency.linux' | translate }} </span></li>
+                  <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">{{ 'label.proficiency.macos' | translate }}</span></li>
                 </ul>
               </div>
 
@@ -49,19 +49,19 @@
               <div class="col" data-aos="fade-up" data-aos-duration="1000">
                 <h5 class="other-proyect-title mt-4">{{ 'label.proficiency.network' | translate}}</h5>
                 <ul class="skills-list" data-aos="fade-up">
-                  <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">Cisco </span></li>
-                  <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">Extreme </span></li>
-                  <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">Juniper </span></li>
-                  <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">D-LINK </span></li>
+                  <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">{{ 'label.proficiency.cisco' | translate }}</span></li>
+                  <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">{{ 'label.proficiency.extreme' | translate }}</span></li>
+                  <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">{{ 'label.proficiency.juniper' | translate }}</span></li>
+                  <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">{{ 'label.proficiency.d-link' | translate }}</span></li>
                 </ul>
               </div>
               <div class="col" data-aos="fade-up" data-aos-duration="1000">
                 <h5 class="other-proyect-title mt-4">{{ 'label.proficiency.language' | translate}}</h5>
                 <ul class="skills-list" data-aos="fade-up">
-                  <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">Portuguese (Native) </span></li>
-                  <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">English </span></li>
-                  <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">French </span></li>
-                  <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">Dutch </span></li>
+                  <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">{{ 'label.proficiency.portuguese' | translate }}</span></li>
+                  <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">{{ 'label.proficiency.english' | translate }}</span></li>
+                  <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">{{ 'label.proficiency.french' | translate }}</span></li>
+                  <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">{{ 'label.proficiency.dutch' | translate }}</span></li>
                 </ul>
               </div>
 
