--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,7 +1,7 @@
 <main>
     <app-banner></app-banner>
     <app-about></app-about>
-    <app-more-proyects></app-more-proyects>
+    <app-education></app-education>
     <app-experience></app-experience>
     <app-proficiency></app-proficiency>
     <app-contact></app-contact>
